# ragqueen

./: .gitignore  README.md  config.yaml  main.py  process_input.py  pyproject.toml  query.py
src/: __init__.py  gitlabreporeader.py  model_interface.py  preprocessing.py  retriever.py
